added pd code loop

--- a/yolo.ipynb
+++ b/yolo.ipynb
@@ -19,7 +19,47 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "def pedestrian_detection(image, model, layer_name, personidz=0):\n",
+    "    (H, W) = image.shape[:2]\n",
+    "    results = []\n",
+    "\n",
+    "    blob = cv2.dnn.blobFromImage(image, 1 / 255.0, (416, 416), swapRB=True, crop=False)\n",
+    "    model.setInput(blob)\n",
+    "    layerOutputs = model.forward(layer_name)\n",
+    "\n",
+    "    boxes = []\n",
+    "    centroids = []\n",
+    "    confidences = []\n",
+    "\n",
+    "    for output in layerOutputs:\n",
+    "        for detection in output:\n",
+    "            scores = detection[5:]\n",
+    "            classID = np.argmax(scores)\n",
+    "            confidence = scores[classID]\n",
+    "\n",
+    "            if classID == personidz and confidence > MIN_CONFIDENCE:\n",
+    "                box = detection[0:4] * np.array([W, H, W, H])\n",
+    "                (centerX, centerY, width, height) = box.astype(\"int\")\n",
+    "                x = int(centerX - (width / 2))\n",
+    "                y = int(centerY - (height / 2))\n",
+    "\n",
+    "                boxes.append([x, y, int(width), int(height)])\n",
+    "                centroids.append((centerX, centerY))\n",
+    "                confidences.append(float(confidence))\n",
+    "\n",
+    "    idzs = cv2.dnn.NMSBoxes(boxes, confidences, MIN_CONFIDENCE, NMS_THRESHOLD)\n",
+    "\n",
+    "    if len(idzs) > 0:\n",
+    "        for i in idzs.flatten():\n",
+    "            (x, y) = (boxes[i][0], boxes[i][1])\n",
+    "            (w, h) = (boxes[i][2], boxes[i][3])\n",
+    "            res = (confidences[i], (x, y, x + w, y + h), centroids[i])\n",
+    "            results.append(res)\n",
+    "\n",
+    "    return results\n"
+   ]
   }
  ],
  "metadata": {
