final changes added

--- a/yolo.ipynb
+++ b/yolo.ipynb
@@ -60,6 +60,53 @@
     "\n",
     "    return results\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "labelsPath = \"coco.names\"\n",
+    "LABELS = open(labelsPath).read().strip().split(\"\\n\")\n",
+    "\n",
+    "weights_path = \"yolov4-tiny.weights\"\n",
+    "config_path = \"yolov4-tiny.cfg\"\n",
+    "\n",
+    "model = cv2.dnn.readNetFromDarknet(config_path, weights_path)\n",
+    "\n",
+    "layer_name = model.getLayerNames()\n",
+    "layer_name = [layer_name[i - 1] for i in model.getUnconnectedOutLayers()]\n",
+    "\n",
+    "# Access the webcam with (0) or else whatever video wanna put using \"video1.mp4\"\n",
+    "#cap = cv2.VideoCapture(0)\n",
+    "cap = cv2.VideoCapture(\"push.mp4\")\n",
+    "\n",
+    "\n",
+    "while True:\n",
+    "    (grabbed, image) = cap.read()\n",
+    "    ret, frames = cap.read()\n",
+    "    frames = cv2.resize(frames, (0, 0), fx=0.5, fy=0.5)\n",
+    "\n",
+    "    if not grabbed:\n",
+    "        break\n",
+    "\n",
+    "    image = imutils.resize(image, width=700)\n",
+    "    results = pedestrian_detection(image, model, layer_name, personidz=LABELS.index(\"person\"))\n",
+    "\n",
+    "    for res in results:\n",
+    "        cv2.rectangle(image, (res[1][0], res[1][1]), (res[1][2], res[1][3]), (0, 255, 0), 2)\n",
+    "\n",
+    "    cv2.imshow(\"Pedestrian Detection\", image)\n",
+    "\n",
+    "    key = cv2.waitKey(1)\n",
+    "    if key == 27:  # Press 'Esc' to exit the loop\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "cv2.destroyAllWindows()\n"
+   ]
   }
  ],
  "metadata": {
