--- a/yolo.ipynb
+++ b/yolo.ipynb
@@ -81,7 +81,7 @@
     "\n",
     "# Access the webcam with (0) or else whatever video wanna put using \"video1.mp4\"\n",
     "#cap = cv2.VideoCapture(0)\n",
-    "cap = cv2.VideoCapture(\"push.mp4\")\n",
+    "cap = cv2.VideoCapture(\"video1.mp4\")\n",
     "\n",
     "\n",
     "while True:\n",
